--- a/for-your-special-dayyyyyy.html
+++ b/for-your-special-dayyyyyy.html
@@ -405,7 +405,7 @@
                         particles.push(new SharpParticle(this.x, this.y, `#9f3a33`, true));
                     }
                     // Mengubah parameter menjadi array untuk handle 2 baris
-                    setTimeout(() => createTextParticles(["DELLA","INDIYANI"], this.x, this.y, "#ffffff"), 1);
+                    setTimeout(() => createTextParticles(["DELLA","INDIYANI"], this.x, this.y, "#ff69b4"), 1); 
                     cinematicDone = true;
                     setTimeout(() => { nextPageBtn.style.display = 'block'; }, 5000); 
                 } else {
