--- a/For-Sayangku.html
+++ b/For-Sayangku.html
@@ -241,7 +241,7 @@
 <body>
     <!-- SONG -->
     <audio id="birthday-music" loop preload="auto">
-        <source src="https://luzairx.github.io/Music/athousand-years.mp3" type="audio/mpeg">
+        <source src="http://birthdaysx.github.io/Musik/athousan-years-james.mp3" type="audio/mpeg">
     </audio>
 
     <canvas id="canvas"></canvas>
@@ -260,7 +260,7 @@
     </div>
 
     <!-- FOTO -->
-    <div id="page-3" class="page hidden">
+    <div id="page-3" class="page hidden"> 
         <div class="photo-gallery">
             <div class="photo-item photo-1"><img src="https://birthdaysx.github.io/Foto/ggg1.jpeg" alt="Momen 1"></div>
             <div class="photo-item photo-2"><img src="https://birthdaysx.github.io/Foto/ggg2.jpeg" alt="Momen 2"></div>
@@ -370,7 +370,7 @@
                 this.isCinematic = isCinematic;
                 const angle = Math.atan2(targetY - this.y, targetX - this.x);
                 this.speed = isCinematic ? 0.01 : 2.5;             
-                this.acceleration = isCinematic ? 1.018 : 1.1;      
+                this.acceleration = isCinematic ? 1.03  : 1.1;      
                 this.velocityUnit = { x: Math.cos(angle), y: Math.sin(angle) };
                 this.hue = isCinematic ? 0 : random(0, 360);
                 this.color = isCinematic ? '#ff4500' : `hsl(${this.hue}, 100%, 70%)`;
