--- a/Untuk-Pujaan-Hatiku.html
+++ b/Untuk-Pujaan-Hatiku.html
@@ -307,7 +307,7 @@
         const messageToType = "It’s your special day sayang, wish you all the best, My future Dentist 🦷 maacii sayang udaa lahir kedunia ini dan hadir di kehidupanku. selamat bertumbuh jadi versi yang lebih baik setiap harinya, sayangku, cintaku. panjang umur dan sehat selalu ya sayangg.";
 
         // DAFTAR UCAPAN (WISHES) 
-        const wishes = [["HAPPY BIRTHDAY","Sayangg🤍"],["I LOVE YOU","SO MUCH"],"SEHAT SELALU","PANJANG UMUR",["WISH YOU","ALL THE BEST"], "MAKIN SUKSES","LOVE YOU ALWAYS","BAHAGIA TERUS","TAMBAH CANTIK"];
+        const wishes = ["3","2","1",["HAPPY LEVEL UP","DAY SAYANG😘💗"],["I LOVE YOU","SO MUCH"],"SEHAT SELALU","PANJANG UMUR",["WISH YOU","ALL THE BEST"], "MAKIN SUKSES","LOVE YOU ALWAYS","BAHAGIA TERUS","TAMBAH CANTIK"];
         let wishIndex = 0;
 
         function resize() {
