--- a/Coba-Buka.html
+++ b/Coba-Buka.html
@@ -307,8 +307,8 @@
         const messageToType = "Makin tua yaaa hehe👨 bertambah terus rejekinya untuk menafkahi aku💸💰sukses terus dan banyak cuan sampe kakek kakek👴 sukses bisa bangun rumah 🏡 dan beli mobil 🚘 untukku nanti WKWK makin tua harus tetep strong menghadapi lika liku kehidupan ini yaa💪 tambah rajin ibadahnya ya cintaku💒 semoga sayang bahagia dan bisa ngebahagiain orang orang terdekat sayang😍 bisa bikin mereka bangga🤘semoga sehat selalu, jaga kesehatan sayang ya, jangan sakit💉semoga Tuhan selalu menyertai disetiap langkah kehidupan sayang ya dan setiap apa yang sayang kerjakan dibuat berhasil🙌 terimakasih buat semua perhatian dan cinta yang sayang kasih buatku, you means a lot for me, lost for words :) I Love you to the moon and back...enjoy 28 !! ✨";
 
         // DAFTAR UCAPAN (WISHES) 
-        const wishes = ["HAPPY BIRTHDAY","PANJANG UMUR","SEHAT SELALU","I LOVE YOU",["WISH YOU","ALL THE BEST"], ["GOD BLESS","YOU"],"SUKSES TERUS","MURAH REZEKI",];
-        let wishIndex = 0;
+        const wishes = [["HAPPY","BIRTHDAY"],["PANJANG","UMUR"],["SEHAT","SELALU"],["I LOVE","YOU"],["WISH YOU","ALL THE BEST"], ["GOD BLESS","YOU"],["SUKSES","TERUS"],["MURAH","REZEKI"]];
+        let wishIndex = 0; 
 
         function resize() {
             width = canvas.width = window.innerWidth;
