--- a/Tolong-Dibuka-Yah.html
+++ b/Tolong-Dibuka-Yah.html
@@ -276,7 +276,7 @@
  
     <!-- NAMA YG ULTAH -->
         <div class="message-card" id="message-card">
-            <h2>HAPPY BIRTHDAY<br>CINTYA🤍</h2>
+            <h2>HAPPY BIRTHDAY<br>CINTYA🫶🏻"</h2>
             <!-- Teks dikosongkan untuk diisi animasi mengetik -->
             <p id="typing-text"></p>
     <!-- PENGIRIM --> 
@@ -405,7 +405,7 @@
                         particles.push(new SharpParticle(this.x, this.y, `#9f3a33`, true));
                     }
                     // Mengubah parameter menjadi array untuk handle 2 baris
-                    setTimeout(() => createTextParticles("CINTYA❤️", this.x, this.y, "#ffffff"), 1);
+                    setTimeout(() => createTextParticles("CINTYA🫶🏻", this.x, this.y, "#ffffff"), 1);
                     cinematicDone = true;
                     setTimeout(() => { nextPageBtn.style.display = 'block'; }, 5000);  
                 } else {
