--- a/Not-an-ordinary-website.html
+++ b/Not-an-ordinary-website.html
@@ -827,7 +827,7 @@
                 document.getElementById('seal-loading').classList.add('hidden');
                 document.getElementById('final-sent').classList.remove('hidden');
                 
-                const d = new Date();
+                const d = new Date('2002-03-22');
                 const opt = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
                 document.getElementById('date-display').innerText = d.toLocaleDateString('en-US', opt);
             }, 3000);
