--- a/Birthday-Gift.html
+++ b/Birthday-Gift.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Birthday Gift🤍</title>
+    <title>Birthday Gift</title>
     <!-- Menambahkan link font Quicksand agar terbaca di canvas -->
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap" rel="stylesheet">
     <style> 
@@ -244,10 +244,10 @@
 <body>
     <!-- SONG -->
     <audio id="birthday-music" loop preload="auto">
-        <source src="https://birthdaysx.github.io/Musik/athousand-christina.mp3" type="audio/mpeg">
+        <source src="https://birthdaysx.github.io/Musik/photograph.mp3" type="audio/mpeg">
     </audio>
 
-    <canvas id="canvas"></canvas>
+    <canvas id="canvas"></canvas> 
  
     <div id="page-1" class="page"> 
         <h1>Happy Birthday!</h1>
@@ -272,7 +272,7 @@
             <div class="photo-item photo-5"><img src="https://birthdaysx.github.io/Foto2/h5.jpeg" alt="Momen 5"></div>
         </div> 
 
-        <div id="scroll-hint" class="scroll-hint">Scroll kebawah ya sayangg.. 👇</div>
+        <div id="scroll-hint" class="scroll-hint">Scroll kebawah ya best.. 👇</div>
  
     <!-- NAMA YG ULTAH -->
         <div class="message-card" id="message-card">
