--- a/Selamat-ulang-tahun-lelakiku.html
+++ b/Selamat-ulang-tahun-lelakiku.html
@@ -405,10 +405,10 @@
                         particles.push(new SharpParticle(this.x, this.y, `#9f3a33`, true));
                     }
                     // Mengubah parameter menjadi array untuk handle 2 baris
-                    setTimeout(() => createTextParticles("RIZKI", this.x, this.y, "#ffffff"), 1);
+                    setTimeout(() => createTextParticles("RIZQI", this.x, this.y, "#ffffff"), 1);
                     cinematicDone = true;
                     setTimeout(() => { nextPageBtn.style.display = 'block'; }, 5000);  
-                } else {
+                } else { 
                     for (let i = 0; i < 50; i++) {
                         particles.push(new SharpParticle(this.x, this.y, this.color));
                     }
