--- a/It’s-Your-Special-Day-Mr.FL.html
+++ b/It’s-Your-Special-Day-Mr.FL.html
@@ -248,7 +248,7 @@ Happy Birthday ya🎉 <br> ૮₍ ˶ᵔ ᵕ ᵔ˶ ₎ა </h1>
 
             <div class="page" id="p5">
                 <img src="https://birthdaysx.github.io/Foto2/r1.jpeg" class="photo-frame"> 
-                <h3>Aku bangga, aku beruntung, aku bersyukur bisa kenal sama kamu hidupku☺️✨</h3>
+                <h3>Aku bangga, aku beruntung, aku bersyukur bisa kenal sama kamu☺️✨</h3>
                 <p class="text">Aku cuma mau bilang makasih ya, udah hadir dihidupku, slalu ada buat aku, aku bahagia punya kamu💕<3</p>
                 <button onclick="nextPage(5)">open this (♡ ᵔ ᵕ ᵔ ♡)</button>
             </div>
