--- a/Surprise-Birthdayy.html
+++ b/Surprise-Birthdayy.html
@@ -1319,7 +1319,7 @@
             document.getElementById('envelope-wrapper').classList.add('hidden');
             document.getElementById('letter-opened').classList.remove('hidden');
             
-            const txt = "Happy Birthday Ni luh putu putri trisna dewi<br>it’s your special day, sayang 💐 wish u all the best, bubbiee🤍 maacii sayang udaa lahir kedunia ini dan jadi pasanganku. selamat bertumbuh jadi versi yang lebih baik setiap harinya, sayangku, cintaku. pajang umur dan sehat selalu ya sayangg, biar kita bisa bareng terus🥹💗 harapan akuu dihari ulang tahun sayangg, apapun yang sayang minta, cari, dan harapkan, semoga satu persatu terwujud, hari ini dan seterusnya 🤍 semoga tuhan mengabulkan hal-hal baik yang benar-benar diinginkan hati sayangg.<br>happy birthday sayangg💐💗";
+            const txt = "Happy Birthday Ni luh putu putri trisna dewi<br>it’s your special day, sayang 💐 wish u all the best, bubbiee🤍 maacii sayang udaa lahir kedunia ini dan jadi pasanganku. selamat bertumbuh jadi versi yang lebih baik setiap harinya, sayangku, cintaku. pajang umur dan sehat selalu ya sayangg, biar kita bisa bareng terus🥹💗 harapan akuu dihari ulang tahun sayangg, apapun yang sayang minta, cari, dan harapkan, semoga satu persatu terwujud, hari ini dan seterusnya 🤍<br>happy birthday sayangg💐💗";
             const target = document.getElementById('type-p3');
             target.innerHTML = ""; 
             let i = 0;
