--- a/Happy-Birthday-My-Favorite-Person.html
+++ b/Happy-Birthday-My-Favorite-Person.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>For My Love🤍</title>
+    <title>Happy Birthday My Favorite Person🤍</title>
     <!-- Menambahkan link font Quicksand agar terbaca di canvas -->
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap" rel="stylesheet">
-    <style>
+    <style> 
         body {
             margin: 0;
             padding: 0;
