--- a/Birthday-Surprise-For-You.html
+++ b/Birthday-Surprise-For-You.html
@@ -244,9 +244,9 @@
 <body>
     <!-- SONG -->
     <audio id="birthday-music" loop preload="auto">
-        <source src="https://birthdaysx.github.io/Musik/athousand-years.mp3" type="audio/mpeg">
-    </audio>
-
+        <source src="https://birthdaysx.github.io/Musik/bitterlove.mp3" type="audio/mpeg">
+    </audio> 
+ 
     <canvas id="canvas"></canvas>
  
     <div id="page-1" class="page">
@@ -374,7 +374,7 @@
                 this.isCinematic = isCinematic;
                 const angle = Math.atan2(targetY - this.y, targetX - this.x);
                 this.speed = isCinematic ? 0.01 : 2.5;             
-                this.acceleration = isCinematic ? 1.018 : 1.1; 
+                this.acceleration = isCinematic ? 1.026    : 1.1; 
                 this.velocityUnit = { x: Math.cos(angle), y: Math.sin(angle) };
                 this.hue = isCinematic ? 0 : random(0, 360);
                 this.color = isCinematic ? '#ff4500' : `hsl(${this.hue}, 100%, 70%)`;
