--- a/please-open-me.html
+++ b/please-open-me.html
@@ -304,7 +304,7 @@
         let cinematicDone = false;
  
         // MESSAGE CARD
-        const messageToType = "Happy birthday for you sayanggg, semoga panjang umurr sehat selaluu, dan bahagiaaa intinyaa banyakk doaa yang akuu selalu ku doakan buat kebaikann kamuu.. di harii yang spesiall ini semogaa kamuu menjadiii pribadi yangg lebih baikk lagi dan tetapp menjadiii zahwaa yang akuu kenalll… sayangg jangann pernahh berubahh yaa jadikannlah dirimuu yangg apaa adanyaa, justruu akuu sukaa kalauu kamuu apaa adanyaa, yang terakhir sebenarnya masih banyakk doaa dan kataa yang akuu pengann sampaikann tapii nantii gaa cukupp lembaranyaa hahaa, loveeee uuu moreee my universe… 💙💙💙\n\n"+"Btww untukkkkk kadonyaa nyusull yaa pas ketemuu langsungg.. i’m miss uuu so baddd 🥹\n\n"+"🥳😇🫶🏼";
+        const messageToType = "Happy birthday for you sayanggg, semoga panjang umurr sehat selaluu, dan bahagiaaa intinyaa banyakk doaa yang akuu selalu ku doakan buat kebaikann kamuu.. di harii yang spesiall ini semogaa kamuu menjadiii pribadi yangg lebih baikk lagi dan tetapp menjadiii zahwaa yang akuu kenalll… sayangg jangann pernahh berubahh yaa jadikannlah dirimuu yangg apaa adanyaa, justruu akuu sukaa kalauu kamuu apaa adanyaa, yang terakhir sebenarnya masih banyakk doaa dan kataa yang akuu pinginn sampaikann tapii nantii gaa cukupp lembaranyaa hahaa, loveeee uuu moreee my universe… 💙💙💙\n\n"+"Btww untukkkkk kadonyaa nyusull yaa pas ketemuu langsungg.. i’m miss uuu so baddd 🥹\n\n"+"🥳😇🫶🏼";
 
         // DAFTAR UCAPAN (WISHES) 
         const wishes = [["HAPPY BIRTHDAY","MYY LOVEE🤍"],["HAPPY BIRTHDAY","MY UNIVERSE"],["BARAKALLAH","FII UMRII"],"SEHAT SELALU",["BAHAGIA","SELALU"],["EVERYTHING FOR","FOR YOUR HAPPY"]]; 
