--- a/Untuk-Bu-Erika-Amelia-Yang-Tercinta.html
+++ b/Untuk-Bu-Erika-Amelia-Yang-Tercinta.html
@@ -244,8 +244,8 @@
 <body>
     <!-- SONG -->
     <audio id="birthday-music" loop preload="auto">
-        <source src="https://birthdaysx.github.io/Musik/athousand-years.mp3" type="audio/mpeg">
-    </audio>
+        <source src="https://birthdaysx.github.io/Musik/dibandung.mp3" type="audio/mpeg">
+    </audio> 
 
     <canvas id="canvas"></canvas>
  
@@ -374,13 +374,13 @@
                 this.isCinematic = isCinematic;
                 const angle = Math.atan2(targetY - this.y, targetX - this.x);
                 this.speed = isCinematic ? 0.01 : 2.5;             
-                this.acceleration = isCinematic ? 1.018 : 1.1; 
+                this.acceleration = isCinematic ? 1.015 : 1.1; 
                 this.velocityUnit = { x: Math.cos(angle), y: Math.sin(angle) };
                 this.hue = isCinematic ? 0 : random(0, 360);
                 this.color = isCinematic ? '#ff4500' : `hsl(${this.hue}, 100%, 70%)`;
             }
             draw() {
-                ctx.save();
+                ctx.save(); 
                 ctx.beginPath();
                 ctx.moveTo(this.x, this.y);
                 ctx.lineTo(this.x - this.velocityUnit.x * this.speed * 4, this.y - this.velocityUnit.y * this.speed * 4);
