--- a/Sweet-Nineteen.html
+++ b/Sweet-Nineteen.html
@@ -350,7 +350,8 @@ harapan akuu di hari ulang tahun Aisyah, apapun yang Aisyah minta, cari, dan har
 
 semoga tuhan mengabulkan hal - hal baik yang benar - benar diinginkan hati Aisyah, AaMiin💗
 
-Kenapa aku panggil Aisyah, karena kamu engga perlu berubah dari yang dulu(⁠っ⁠.⁠❛⁠ ⁠ᴗ⁠ ⁠❛⁠.⁠)⁠っ
+Kenapa aku panggil Aisyah, karena kamu engga perlu berubah dari yang dulu
+(⁠っ⁠.⁠❛⁠ ⁠ᴗ⁠ ⁠❛⁠.⁠)⁠っ
 
 kadang memang cuma diri - sendiri yang bisa diandalkan, tapi jangan pernah ngerasa sendirian yaa. ada bayak orang yang sayang sama kamu.
 
