--- a/HBD-Istriku.html
+++ b/HBD-Istriku.html
@@ -358,14 +358,14 @@
             <button class="transition-btn" id="to-matrix-btn">Ada satu kejutan lagi...</button>
         </div>
     </div>
-
-    <div id="credit-text">by fazescript</div>
-
+ 
+    <div id="credit-text">ingzey</div>
+ 
     <!-- ELEMEN GAMBAR LINK (MUNCUL DI AKHIR MATRIX) -->
     <!-- Ganti href dengan link tujuan (misal: link WhatsApp atau YouTube) -->
     <a id="final-link" href="https://open.spotify.com/track/6VgyRGeR4cw6yNGazjGFhu?si=0-4N8iEyT6e3Vx7NfQdzKg" target="_blank" title="Klik untuk menuju link">
         <!-- Ganti src dengan link gambar yang kamu inginkan -->
-        <img src="https://birthdaysx.github.io/Foto2/yy1.jpeg" alt="Klik Gambar Ini">
+        <img src="https://birthdaysx.github.io/Foto2/yy6.jpeg" alt="Klik Gambar Ini">
         <p>Klik Gambar Ini ✨</p>
     </a>
 
