--- a/happybdayAbangHabib.html
+++ b/happybdayAbangHabib.html
@@ -322,7 +322,7 @@
         let cinematicDone = false; 
  
         // MESSAGE CARD
-        const messageToType = "Selamat hari lahir abangnya adek, it’s your special day abang. Maacih  udah lahir di dunia dan jadi orang yang baik untuk adek, adek senang bisa kenal abng. \n\n"+"selamat bertumbuh menjadi versi yang lebih baik tiap harinya abangku cintaku. Doa- nya semoga apapun yang abng usahakan bisa terwujud, sukses selalu, makin banyak rezekinyo. Jangan lupa shalat, makin syang samo keluarga. Abang, adek selalu disini disetiap proses, disetiap hari. Jadi harus terus SEMANGAT YO. Sehat selalu ya abang, adek masih butuh abang di dunia yang penuh lika liku iko🥹🤍";
+        const messageToType = "Selamat hari lahir abangnya adek, it’s your special day abang. Maacih  udah lahir di dunia dan jadi orang yang baik untuk adek, adek senang bisa kenal abng. \n\n"+"selamat bertumbuh menjadi versi yang lebih baik tiap harinya abangku cintaku. Doa- nya semoga apapun yang abng usahakan bisa terwujud, sukses selalu, makin banyak rezekinyo. Jangan lupa shalat, makin syang samo keluarga. Abang, adek selalu disini disetiap proses, disetiap hari. Jadi harus terus SEMANGAT YO. Sehat selalu ya abang, adek masih butuh abang di dunia yang penuh lika liku iko🥹🤍\n\n"+"Adek harap abng tau kalo adek selalu bangga samo abng, bahkan saat abng kalah, saat abng meragukan diri abng sendiri, dan bahkan saat dunia pun idak melihat usaha abng. \n\n"+"Tapi maapinn yo abang kalo adek masih sering buat abng kesal, masih keras kepala dikit wkwk 🤏🏼";
 
         // DAFTAR UCAPAN (WISHES) 
         const wishes = ["HAPPY BIRTHDAY",["SEHAT","SELALU"],"JANLUPA SHOLAT","SUKSES TERUS",["MURAH","REZEKI"], ["SAYANG KEK","ADEK"],["SEMANGAT","ABANG"],"BAHAGIA SELALUA"];
