--- a/Cinta.html
+++ b/Cinta.html
@@ -279,8 +279,8 @@
             <h2>Happy Birthday<br>Sry Yolanda patilima🤍</h2>
             <!-- Teks dikosongkan untuk diisi animasi mengetik -->
             <p id="typing-text"></p>
-    <!-- PENGIRIM --> 
-            <p style="font-style: italic; margin-top: 15px;">mbenking</p>
+    <!-- PENGIRIM -->  
+            <p style="font-style: italic; margin-top: 15px;">Otanjōbiomedetō🥳🥳🥳</p>
             <button class="restart-btn" onclick="location.reload()">Mulai Lagi</button>
         </div>
     </div>
