--- a/Happy-Birthday-Sayangg.html
+++ b/Happy-Birthday-Sayangg.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday Sayangg💐</title>
+    <title>Happy Birthday Sayang💐</title>
     <!-- Menambahkan link font Quicksand agar terbaca di canvas -->
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap" rel="stylesheet">
     <style>
         body { 
-            margin: 0;
+            margin: 0; 
             padding: 0;
             background-color: #000;
             overflow: hidden;
@@ -244,13 +244,13 @@
 <body>
     <!-- SONG -->
     <audio id="birthday-music" loop preload="auto">
-        <source src="https://birthdaysx.github.io/Musik/athousand-christina.mp3" type="audio/mpeg">
+        <source src="https://birthdaysx.github.io/Musik/give-me-your.mp3" type="audio/mpeg">
     </audio>
  
-    <canvas id="canvas"></canvas> 
- 
-    <div id="page-1" class="page">
-        <h1>Happy Birthday <br>Sayangg!</h1>
+    <canvas id="canvas"></canvas>  
+  
+    <div id="page-1" class="page"> 
+        <h1>Happy Birthday <br>Sayang!</h1>
         <button id="gift-button" aria-label="Buka Kado">🎁</button>
         <p style="color: #888; margin-top: 30px; letter-spacing: 1px;">Klik kado untuk kejutan</p>
     </div>
@@ -272,7 +272,7 @@
             <div class="photo-item photo-5"><img src="https://birthdaysx.github.io/Foto3/r5.jpeg" alt="Momen 5"></div>
         </div> 
 
-        <div id="scroll-hint" class="scroll-hint">Scroll kebawah ya sayangg.. 👇</div>
+        <div id="scroll-hint" class="scroll-hint">Scroll kebawah ya sayang.. 👇</div>
  
     <!-- NAMA YG ULTAH -->
         <div class="message-card" id="message-card">
