--- a/Happy-Birthday-Sayangg.html
+++ b/Happy-Birthday-Sayangg.html
@@ -241,13 +241,13 @@
         }
     </style>
 </head>
-<body>
+<body> 
     <!-- SONG -->
-    <audio id="birthday-music" loop preload="auto">
-        <source src="https://birthdaysx.github.io/Musik/give-me-your.mp3" type="audio/mpeg">
+    <audio id="birthday-music" loop preload="auto"> 
+        <source src="https://birthdaysx.github.io/Musik/give-me-your-forever.mp3" type="audio/mpeg">
     </audio>
  
-    <canvas id="canvas"></canvas>  
+    <canvas id="canvas"></canvas>   
   
     <div id="page-1" class="page"> 
         <h1>Happy Birthday <br>Sayang!</h1>
@@ -374,7 +374,7 @@
                 this.isCinematic = isCinematic;
                 const angle = Math.atan2(targetY - this.y, targetX - this.x);
                 this.speed = isCinematic ? 0.01 : 2.5;             
-                this.acceleration = isCinematic ? 1.028    : 1.1; 
+                this.acceleration = isCinematic ? 1.013       : 1.1; 
                 this.velocityUnit = { x: Math.cos(angle), y: Math.sin(angle) };
                 this.hue = isCinematic ? 0 : random(0, 360);
                 this.color = isCinematic ? '#ff4500' : `hsl(${this.hue}, 100%, 70%)`;
