--- a/Happy-Birthday-Sintiaa.html
+++ b/Happy-Birthday-Sintiaa.html
@@ -276,11 +276,11 @@
  
     <!-- NAMA YG ULTAH -->
         <div class="message-card" id="message-card">
-            <h2>Happy Birthday<br>Sntya🤍</h2>
+            <h2>Happy Birthday<br>Sintia🤍</h2>
             <!-- Teks dikosongkan untuk diisi animasi mengetik -->
             <p id="typing-text"></p>
     <!-- PENGIRIM -->  
-            <p style="font-style: italic; margin-top: 15px;">from Aa</p>
+            <p style="font-style: italic; margin-top: 15px;">LoveYouSoMuch</p>
             <button class="restart-btn" onclick="location.reload()">Mulai Lagi</button>
         </div>
     </div>
@@ -405,7 +405,7 @@
                         particles.push(new SharpParticle(this.x, this.y, `#9f3a33`, true));
                     }
                     // Mengubah parameter menjadi array untuk handle 2 baris
-                    setTimeout(() => createTextParticles("SNTYA", this.x, this.y, "#ffffff"), 1);
+                    setTimeout(() => createTextParticles("SINTIA", this.x, this.y, "#ffffff"), 1);
                     cinematicDone = true;
                     setTimeout(() => { nextPageBtn.style.display = 'block'; }, 5000);  
                 } else {
