--- a/Feli-Birthday.html
+++ b/Feli-Birthday.html
@@ -272,7 +272,7 @@
             <div class="photo-item photo-5"><img src="https://birthdaysx.github.io/Foto3/v5.jpeg" alt="Momen 5"></div>
         </div> 
 
-        <div id="scroll-hint" class="scroll-hint">Scroll kebawah ya sayang.. 👇</div>
+        <div id="scroll-hint" class="scroll-hint">Scroll kebawah ya felii.. 👇</div> 
  
     <!-- NAMA YG ULTAH -->
         <div class="message-card" id="message-card">
