--- a/happy-birthday-bb.html
+++ b/happy-birthday-bb.html
@@ -341,11 +341,13 @@
             if(next === 8) {
                 startTypewriter();
             }
-        }
+        } 
 
         // Efek Mengetik
         const text = `semoga panjang umur, sehat selalu, kesehariannya dilancarkan, diberi kebahagiaan selalu, apapun goals nya tercapai .. selamat bertumbuh jadi lebih baik lagi dan menikmati kasih karunia Tuhan Yesus.. semoga apapun yg kamu inginkan dikabulkan yg terbaik oleh Tuhan .. makasih udah sayang sama aku .. maaf klo misal aku bikin kesel kamu, semoga kamu sabar buat bimbing aku 🥹 .. semoga hubungan kita juga selalu dilingkupi kasih, kebahagiaan dan dihindarkan dari segala hal yg jelek ..
-Tuhan Yesus slalu sertai kamu dan sekeluarga sayang`;
+Tuhan Yesus slalu sertai kamu dan sekeluarga sayang
+
+`; 
 
         // (Biarkan kosong di bawah 'sayang' agar ada jeda baris)
 
