--- a/happy-birthday-bb.html
+++ b/happy-birthday-bb.html
@@ -265,7 +265,7 @@
             <div class="page" id="p7">
                 <img src="https://birthdaysx.github.io/Foto3/x4.jpeg" class="photo-frame"> 
                 <h3>aku selalu sayang kamu dan aku ya selalu berdoa ke Tuhan buat kita semakin tumbuh di dalam Nya🥹🥰</h3>
-                <p class="text">it’your day…</p>
+                <p class="text">it's your day, sayangg. dibaca pelan ajaa, aku punya surat kecil buat bb 🎂</p>
                 <button onclick="nextPage(7)">♡</button>
             </div> 
 
