--- a/For_Your_Birthday.html
+++ b/For_Your_Birthday.html
@@ -301,10 +301,10 @@
         let particles = []; 
         let lasers = [];
         let isStarted = false;
-        let cinematicDone = false; 
+        let cinematicDone = false;  
   
         // MESSAGE CARD
-        const messageToType = "it’s your special day, sayang 💐 wish u all the best sayangg🤍 makasih sayang udaa lahir kedunia ini dan jadi pasanganku. selamat bertumbuh jadi versi yang lebih baik setiap harinya, sayangku, cintaku. pajang umur dan sehat selalu ya sayangg, biar kita bisa bareng terus🥹💗 harapan akuu dihari ulang tahun sayangg, apapun yang sayang minta, cari, dan harapkan, semoga satu persatu terwujud, hari ini dan seterusnya 🤍 semoga tuhan mengabulkan hal-hal baik yang benar-benar diinginkan hati sayangg. happy birthday sayangg💐 aku akan selalu ada buat sayang, disetiap proses, disetiap hari, aku selalu sama sayangg 💗💗";
+        const messageToType = "Hari ini adalah hari spesial yang pernah aku tunggu dengan senang hati. meski kini kita sedang tidak bersama, aku tidak pernah melupakan hari lahirmu.\n\n"+"Doaku untukmu: Semoga Tuhan selalu memberikan kesehatan yang baik, kebahagiaan yang tulus, dan keberkahan dalam setiap langkahmu. Semoga semua impianmu tercapai dengan lancar, dan kamu menemukan kedamaian serta cinta yang sesungguhnya dalam hidupmu.\n\n"+"Terima kasih telah menjadi bagian dari cerita hidupku. Semoga ulang tahunmu penuh dengan kebahagiaan dan keajaiban. Selamat ulang tahun.";
 
         // DAFTAR UCAPAN (WISHES) 
         const wishes = [["HAPPY","BIRTHDAY"],["I LOVE","YOU"],["SEHAT","SELALU"],["PANJANG","UMUR"],["BAHAGIA","TERUS"],["WISH YOU","ALL THE BEST"],["LOVE YOU","ALWAYS"],"MAKIN SUKSES"]; 
