--- a/Happy_Birthday_My_Love.html
+++ b/Happy_Birthday_My_Love.html
@@ -256,7 +256,7 @@
  
     <!-- HALAMAN 1 -->
     <div id="page-1" class="page">
-        <h1>Happy Birthday <br>Sayangg!</h1>
+        <h1>Happy Birthday <br>Sayang!</h1>
         <button id="gift-button" aria-label="Buka Kado">🎁</button>
         <p style="color: #888; margin-top: 30px; letter-spacing: 1px;">Klik kado untuk kejutan</p>
     </div>
