--- a/dibuka-ya-najib-kesayangan-nana.html
+++ b/dibuka-ya-najib-kesayangan-nana.html
@@ -381,11 +381,11 @@
  
     <!-- ELEMEN GAMBAR LINK (MUNCUL DI AKHIR MATRIX) -->
     <!-- Ganti href dengan link tujuan (misal: link WhatsApp atau YouTube) -->
-    <a id="final-link" href="https://open.spotify.com/track/6VgyRGeR4cw6yNGazjGFhu?si=0-4N8iEyT6e3Vx7NfQdzKg" target="_blank" title="Klik untuk menuju link">
+    <a id="final-link" href="https://open.spotify.com/track/5xCsdnbeg7yhVX2qlRaDUw" target="_blank" title="Klik untuk menuju link">
         <!-- Ganti src dengan link gambar yang kamu inginkan -->
-        <img src="https://birthdaysx.github.io/Foto2/yy6.jpeg" alt="Klik Gambar Ini">
+        <img src="https://birthdaysx.github.io/Foto3/aa6.jpeg" alt="Klik Gambar Ini">
         <p>Klik Gambar Ini ✨</p>
-    </a>
+    </a> 
 
     <script>
         /* =========================================
