--- a/dibuka-ya-najib-kesayangan-nana.html
+++ b/dibuka-ya-najib-kesayangan-nana.html
@@ -409,7 +409,7 @@
         </div>
     </div>
  
-    <div id="credit-text">ingzey</div>
+    <div id="credit-text">🤍</div>
  
     <!-- ELEMEN GAMBAR LINK (MUNCUL DI AKHIR MATRIX) -->
     <!-- Ganti href dengan link tujuan (misal: link WhatsApp atau YouTube) -->
