--- a/dibuka-ya-najib-kesayangan-nana.html
+++ b/dibuka-ya-najib-kesayangan-nana.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dibukaa yaa najibb kesayangannya nana🤍</title>
+    <title>Dibukaa yaa najibb kesayangannya nana🩵</title>
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap" rel="stylesheet">
     <style>
@@ -401,7 +401,7 @@
         <div id="scroll-hint" class="scroll-hint">Scroll kebawah ya sayangg.. 👇</div>
   
         <div class="message-card" id="message-card"> 
-            <h2>Happy Birthday<br>Najib🤍</h2> 
+            <h2>Happy Birthday<br>Najib🩵</h2> 
             <p id="typing-text"></p>
             <p style="font-style: italic; margin-top: 15px;">From Nana</p>
             <!-- Tombol Transisi ke Matrix -->
@@ -409,7 +409,7 @@
         </div>
     </div>
  
-    <div id="credit-text">🤍</div>
+    <div id="credit-text">🩵</div>
  
     <!-- ELEMEN GAMBAR LINK (MUNCUL DI AKHIR MATRIX) -->
     <!-- Ganti href dengan link tujuan (misal: link WhatsApp atau YouTube) -->
@@ -462,7 +462,7 @@
         let fw_cinematicDone = false;
  
         const messageToType = "ciee kesayangannyaa akuu lagii ultahh🤭 Happy birthday yaa sayanggggkuuu, akuu selalu doain yang terbaik buat kamuuu. Sayangg... akuu pengenn teruss barengg sama kamuu di keadaan/rintangan apapun. Kita jalaninn semuanyaa dengan bersama saama yaa?? Jujurr.. kamu bener bener bisa di bilang tuh cinta pertama akuu secara murni sayangg, tau ga sii aku tuh seseneng dan merasa se beruntung itu bisaa milikin kamu, aku kadang masih ampe ga nyangka aja gituu... makasih yaa udah milih aku dan bales perasaan aku dengan tulus jugaa. Ayoo kita usahakan buat rumah itu nanti , dan tentunya dengan tanpa bentakkan ataupun teriakan, kita buat se harmonis mungkin yaaa. Tenang sayang.. aku ga akan nyerah dan bosen buat selalu nunggu kamu, i lovee youuuu moree🩵🩵";
-        const wishes = [["HAPPY BIRTHDAY","KESAYANGAN AKU"],["SEHAT","SELALU🤍"],"PANJANG UMUR",["DILANCARKAN","REZEKINYA"],["SEMUA WISHLIST","KAMU TERCAPAI"],"BAHAGIA TERUSS",["SELALU SAYANG","AKUUU,HIHIHI"]]; 
+        const wishes = [["HAPPY BIRTHDAY","KESAYANGAN AKU"],["SEHAT","SELALU🩵"],"PANJANG UMUR",["DILANCARKAN","REZEKINYA"],["SEMUA WISHLIST","KAMU TERCAPAI"],"BAHAGIA TERUSS",["SELALU SAYANG","AKUUU,HIHIHI"]]; 
         let wishIndex = 0;
 
         class SharpParticle {
